# rsbudget

./: .env  Cargo.toml
backend/: Cargo.toml
backend/src/: .env  lib.rs  main.rs
backend/src/errors/: mod.rs
backend/src/services/: mod.rs
data/: test.db
rbudget/: Cargo.toml
rbudget/src/: main.rs
rbudget_data/: Cargo.toml
rbudget_data/src/: lib.rs  repo.rs
src/: data.rs  errors.rs  lib.rs  main.rs  record.rs  syntax.rs
