[package]
name = "rbudget"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
dirs = "4.0.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"
rusqlite = "0.27.0"
thiserror = "1.0.31"
tui = "0.18.0"
