[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.11.0", features = ["attributes"]}
dirs = "4.0.0"
dotenv = "0.15.0"
pretty_env_logger = "0.4.0"
serde = "1.0.137"
sqlx = { version = "0.5.13", features = ["runtime-async-std-native-tls", "macros", "sqlite", "uuid", "json"]}
thiserror = "1.0.31"
tide = "0.16.0"
uuid = "1.1.0"
