[package]
name = "rbudget"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
pretty_env_logger = "0.4.0"
rbudget_data = {path="../rbudget_data"}
tokio = {versions="1.18.2", features=["full"]}
